SIMPLE - composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "vpavlovic/plaincms",
     "description": "Test",
+    "version": 1,
     "authors": [
         {
             "name": "Vladimir Pavlovic",
